Fix: hovers and margin on mobile menu

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -277,11 +277,16 @@
     &__list
       flex-direction: column
     &__item
+      &:not(:last-child)
+        margin-bottom: 20px
       &--mobile
         &-visible
           display: flex
-      &:not(:last-child)
-        margin-bottom: 20px
+        &-mb
+          &-3
+            margin-bottom: 30px !important
+          &-4
+            margin-bottom: 40px !important
 
   .logo
     width: 100px
