--- a/sass/components/_hotel.sass
+++ b/sass/components/_hotel.sass
@@ -171,9 +171,19 @@
       font-weight: 600
       font-size: 18px
       line-height: 25px
+      +trs(color)
       +link-reset
       span
         margin-left: 8px
+      svg
+        width: 14px
+        height: 14px
+        fill: #fff
+        +trs(fill)
+      &:hover
+        color: $accent
+        svg
+          fill: $accent
   &-footer
     &__button
       border-radius: 4px
